--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -9,4 +9,22 @@
   </div>
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>content article</th>
+        <th>owner article</th>
+        <th>time post</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td><%= post.content %></td>
+          <td><%= post.user.email %></td>
+          <td><%= post.created_at %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
